2006-01-16  Tim Omernick  <timo@apple.com>

        Reviewed by John Sullivan.

	JavaScriptCore part of <rdar://problem/4211707> NPAPI ref count behavior differs with Mozilla

        * bindings/npruntime.cpp:
        (_NPN_ReleaseObject):
	Refactored part of this function out into _NPN_DeallocateObject.
        (_NPN_DeallocateObject):
	Forcibly deallocates the passed object, even if its refcount is
	greater than zero.
	
        * bindings/npruntime_impl.h:
	Declared _NPN_DeallocateObject().

2006-01-16  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fix problem with ++, ==, and != on const iterators in
          HashMaps that are using the pointer specialization

        * kxmlcore/HashMapPtrSpec.h:
        (KXMLCore::PointerHashConstIteratorAdapter::operator++): Change type to const_iterator.
        (KXMLCore::PointerHashConstIteratorAdapter::operator==): Ditto.
        (KXMLCore::PointerHashConstIteratorAdapter::operator!=): Ditto.

2006-01-15  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Anders.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6561
        run-javascriptcore-tests doesn't work

        * JavaScriptCore/tests/mozilla/Getopt/Mixed.pm: 
        Changed revision number to 1.8 (broken by svn migration).

2006-01-14  David Kilzer  <ddkilzer@kilzer.net>

        Reviewed and landed by Anders.

        * kjs/create_hash_table: Fixed comment typo.

2006-01-13  Maks Orlovich   <maksim@kde.org>

        Mostly merging work by Peter Kelly. Reviewed by Maciej, landed by ap.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6261
        Misc. array object fixes from KJS

        * kjs/array_object.cpp: Don't treat 2^32-1 as a real array index property.
        (ArrayInstance::getOwnPropertySlot): Ditto.
        (ArrayInstance::deleteProperty): Ditto.
        (ArrayInstance::put): Ditto.
        (ArrayInstance::propList): Added a FIXME comment.